rel
* fixing bug in calculating team ranks
* limit for display countdowns is configurable in global ini file

rel 0.1.2
* HQ: Reworked the overview table

rel 0.1.1
* HQ: display team rank order

rel 0.1.0
* Set timezone in config file
* Adding ability to gain coins and buy hints
* metadata.ini: attribute solution.final renamed to cgrp.final
* metadata.ini: Unit (h, m or s) could be specified for timeouts
* Introducing hidden clues
* Ability to send email notification when a team find solution
* Adding new view showing all clues and hints on single screen

 
rel 0.0.10