@@ -158,6 +158,9 @@
 ; Regular expression that match the filenames of clues marked with coin icon
 ;clue_coin_pattern=indicie[0-9-]+c\..*
 
+; Regular expression that match the filenames of clues marked with question mark icon
+;clue_special_pattern=indicie[0-9-]+s\..*
+
 ; Regular expression that match the filenames of hints
 ;hint_pattern=napoveda[0-9-]+.*
 
