@@ -105,7 +105,8 @@ table.clue-list .btn{
 span.new,
 span.newhint,
 span.coin,
-span.finder{
+span.finder,
+span.questionmark{
     display: block;
     float: right;
     width: 30px;
@@ -116,7 +117,8 @@ span.finder{
 .navbar span.new,
 .navbar span.newhint,
 .navbar span.coin,
-.navbar span.finder{
+.navbar span.finder,
+.navbar span.questionmark{
     margin: 5px;
 }
 
@@ -135,6 +137,10 @@ span.coin{
 .navbar span.finder,
 span.finder{
     background-image: url("../img/finder.png");
+}
+.navbar span.questionmark,
+span.questionmark{
+    background-image: url("../img/questionmark.png");
 }
 
 span.coin-animated{
