@@ -16,7 +16,9 @@
     <table class="table table-bordered">
     <tr>
         <th class="filename">{$clue.filename}
-            {if $clue.type=="coin"}<span class="coin"></span>{else}<span class="finder"></span>{/if}
+            {if $clue.type=="coin"}<span class="coin"></span>
+            {elseif $clue.type=="special"}<span class="questionmark"></span>
+            {else}<span class="finder"></span>{/if}
         </th>
         <th class="link"><a href="{$clue.file_url|escape}" class="btn"><i class="icon-download-alt"></i> {$lang_str.iquest_download}</a></th>
     </tr>
