@@ -1,6 +1,7 @@
 rel
 * fixing bug in calculating team ranks
 * limit for display countdowns is configurable in global ini file
+* new type of clues - marked with question mark
 
 rel 0.1.2
 * HQ: Reworked the overview table
